--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -480,7 +480,7 @@ Figure ?? illustrates the arclength theorem in this case for an $(a, b, -2a) = (
 
 \href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
-Robinson identifies the transition points between the upper and lower arcs of the ellipse. At these points the tangent segments to the ellipse bounded by the major and minor axes have length $2b$. Furthermore the point of tangency divides the ellipse into  segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and minor axes (see Figure ?).
+Robinson identifies the transition points between what we call the same and opposite-side arcs of the ellipse. At these points the tangent segments to the ellipse bounded by the major and minor axes have length $2b$. Furthermore the point of tangency divides each segment into segments with lengths $P^*B = b+a$ and $P^*A = b-a$ equal to the semi-major and minor axes (see Figure ?).
 
 \begin{onlineOnly}
     \begin{center}
@@ -540,26 +540,26 @@ Robinson identifies the transition points between the upper and lower arcs of th
 
 
 
-\section{Ellipses}
+%\section{Ellipses}
 
-\begin{onlineOnly}
-    \begin{center}
-\desmos{yzuot0hbvv}{900}{600}
-\end{center}
-\end{onlineOnly}
+%\begin{onlineOnly}
+%    \begin{center}
+%\desmos{yzuot0hbvv}{900}{600}
+%\end{center}
+%\end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/yzuot0hbvv}{Epicycloids 3 Ellipse}
-
-
+%\href{https://www.desmos.com/calculator/yzuot0hbvv}{Epicycloids 3 Ellipse}
 
 
-\begin{onlineOnly}
-    \begin{center}
-\desmos{yillqxp8mg}{900}{600}   %yfoczp8y2g
-\end{center}
-\end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
+
+%\begin{onlineOnly}
+%    \begin{center}
+%\desmos{yillqxp8mg}{900}{600}   %yfoczp8y2g
+%\end{center}
+%\end{onlineOnly}
+
+%\href{https://www.desmos.com/calculator/yillqxp8mg}{Wrapping Cycloids Around Circles Ellipse 2B}
 
 
 Double Generation:
